--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to bottom, black, rgb(31, 34, 34));
+  text-align: center;
 }
 
 code {
